--- a/cacheconfig.ui
+++ b/cacheconfig.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Cache</string>
+   <string>Cache Configuration</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
