--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -254,7 +254,11 @@
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QTableWidget" name="timeline1"/>
+                  <widget class="QTableWidget" name="timeline1">
+                   <attribute name="horizontalHeaderDefaultSectionSize">
+                    <number>125</number>
+                   </attribute>
+                  </widget>
                  </item>
                 </layout>
                </widget>
@@ -392,7 +396,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
