--- a/cacheconfig.ui
+++ b/cacheconfig.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>300</height>
+    <width>460</width>
+    <height>250</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,14 +18,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>458</width>
+    <width>460</width>
     <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>600</width>
-    <height>300</height>
+    <width>460</width>
+    <height>250</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -451,7 +451,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item  alignment="Qt::AlignHCenter">
     <widget class="QPushButton" name="pushButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
